--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 # = DATA SOURCE
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/managerpro?useSSL=false&serverTimezone=UTC
+# add your own username for DB
 spring.datasource.username=manager
+# add your own password for DB
 spring.datasource.password=manager
 
 # ===============================
