--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,7 @@
-image: maven:3-jdk-11
+image: maven:3-jdk-8
+
+include:
+  - template: Dependency-Scanning.gitlab-ci.yml
 
 variables:
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
