--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.datasource.password=manager
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 
 # ===============================
 # = Spring Data REST properties
