--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,12 @@
 		<mysqldump.exec>/usr/bin/mysqldump</mysqldump.exec>
 		<mysqldump.workdir>db-snapshots</mysqldump.workdir>
 		<mysqldump.db>managerpro</mysqldump.db>
-		<mysqldump.user>manager</mysqldump.user> <!-- add your own username -->
-		<mysqldump.password>manager</mysqldump.password> <!-- add your own password for DB -->
+		<mysqldump.user>root</mysqldump.user> <!-- add your own username -->
+		<mysqldump.password>Ernestina1!</mysqldump.password> <!-- add your own password for DB -->
 		<mysqldump.host>localhost</mysqldump.host>
 		<mysqldump.output>db-snapshot-${project.version}</mysqldump.output>
+		<audit4j.version>2.5.0</audit4j.version>
+		<aspectjweaver.version>1.8.13</aspectjweaver.version>
 	</properties>
 
 	<dependencies>
@@ -52,6 +54,28 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.audit4j</groupId>
+			<artifactId>audit4j-core</artifactId>
+			<version>${audit4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.audit4j</groupId>
+			<artifactId>audit4j-spring</artifactId>
+			<version>${audit4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.audit4j</groupId>
+			<artifactId>audit4j-db</artifactId>
+			<version>${audit4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectjweaver.version}</version>
 		</dependency>
 
 		<dependency>
