--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,24 @@ javamelody.init-parameters.log=true
 # javamelody.init-parameters.storage-directory=/tmp/javamelody
 #    to change the default "/monitoring" path:
 # javamelody.init-parameters.monitoring-path=/admin/performance
-management.server.port=8081
+management.server.port=8445
 management.endpoints.web.exposure.include=info,health,monitoring
 javamelody.management-endpoint-monitoring-enabled=true
+# ===============================
+# = SSL Props
+# ===============================
+server.port=8443
+server.ssl.enabled=true
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/localhost.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=password
+# The alias mapped to the certificate
+server.ssl.key-alias=localhost
+
+#trust store location
+trust.store=classpath:keystore/localhost.p12
+#trust store password
+trust.store.password=password
