--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=nopass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.session.jdbc.initialize-schema=always
-# spring.datasource.data=data-h2.sql
+spring.datasource.data=data-h2.sql
 spring.datasource.platform=h2
 spring.jpa.generate-ddl=true
